--- a/etc/docker/.env.ci
+++ b/etc/docker/.env.ci
@@ -4,7 +4,7 @@ NETWORK_NAME=${COMPOSE_PROJECT_NAME}
 CI_CONTAINER_NAME=${COMPOSE_PROJECT_NAME}-ci
 
 # Gitlab
-GITLAB_ACCESS_TOKEN=glpat-T79dykamAqyxjzK9YFya
+GITLAB_ACCESS_TOKEN="glpat-T79dykamAqyxjzK9YFya"
 
 # Postgres
 PG_CONTAINER_NAME=${COMPOSE_PROJECT_NAME}-postgres
