Updates: some bugs fixed.

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ auth.json
 ###< friendsofphp/php-cs-fixer ###
 
 !/**/.gitkeep
-###> phpstan/phpstan ###
-phpstan.neon
-###< phpstan/phpstan ###
-
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
